friendlyId to all

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,16 +11,20 @@
         <div class="box-right">
           <ul id="primary-menu" class="main-menu navbar-nav">
             <li id="menu-item-1811" class="menu-item current-menu-item"><a href="#">Home</a></li>
-            <li id="menu-item-1770" class="menu-item menu-item-has-children">
+            <li id="menu-item-1805" class="menu-item"><a href="#">구매대행</a></li>
+            <li id="menu-item-1805" class="menu-item"><a href="#">배송대행</a></li>
+
+            
+            <!-- <li id="menu-item-1770" class="menu-item menu-item-has-children">
               <a href="#" aria-haspopup="true" aria-expanded="false">About Us</a>
               <ul class="sub-menu">
                 <li id="menu-item-1799" class="menu-item"><a href="#">Studio</a></li>
                 <li id="menu-item-1800" class="menu-item"><a href="#">Team</a></li>
                 <li id="menu-item-1771" class="menu-item"><a href="#">Services</a></li>
               </ul>
-            </li>
+            </li> -->
 
-            <li id="menu-item-1774" class="menu-item menu-item-has-children">
+            <!-- <li id="menu-item-1774" class="menu-item menu-item-has-children">
               <a href="#" aria-haspopup="true" aria-expanded="false">Level 1</a>
               <ul class="sub-menu">
                 <li id="menu-item-1775" class="menu-item menu-item-has-children">
@@ -43,7 +47,8 @@
                 <li id="menu-item-1803" class="menu-item"><a href="#">Level 2a</a></li>
                 <li id="menu-item-1804" class="menu-item"><a href="#">Level 2b</a></li>
               </ul>
-            </li>
+            </li> -->
+
             <!-- <li id="menu-item-1777" class="menu-item"><a href="#">Our Work</a></li>
             <li id="menu-item-1805" class="menu-item"><a href="#">The News</a></li>
             <li id="menu-item-1806" class="menu-item"><a href="#">Contact Us</a></li> -->
