--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,7 +32,7 @@
       <p><%= post.body %></p>
       <%= pluralize(post.comments.count, "Comment") %>
       <%= post.get_upvotes.size %> Likes
-      <% if current_user.try(:admin?) %>
+      <% if current_user && current_user == post.user %>
         <%= link_to 'Edit', edit_post_path(post) %>
         <%= link_to "Delete", post_path(post), method: :delete, data: {confirm: "Are you sure?"}%>
       <% end %>
