--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,9 +10,9 @@
         </div>
         <div class="box-right">
           <ul id="primary-menu" class="main-menu navbar-nav">
-            <li id="menu-item-1811" class="menu-item current-menu-item"><a href="#">Home</a></li>
-            <li id="menu-item-1805" class="menu-item"><a href="#">구매대행</a></li>
-            <li id="menu-item-1805" class="menu-item"><a href="#">배송대행</a></li>
+            <li id="menu-item-1811" class="menu-item current-menu-item"><a href="/">Home</a></li>
+            <li id="menu-item-1805" class="menu-item"><a href="/buys">구매대행</a></li>
+            <li id="menu-item-1805" class="menu-item"><a href="/shippings">배송대행</a></li>
 
             
             <!-- <li id="menu-item-1770" class="menu-item menu-item-has-children">
